		"Running" a variable (e.g. cpu0.pc) will print its value.
20080427	Continuing a little on tab completion of variable names.
		Implementing a "dirty flag" for the emulation; the GTKMM GUI
		now asks for confirmation before quitting, opening a new
		emulation, etc, if the model is dirty.
20080501	Fixing LoadComponentAction so that it uses path names for
		Undo, and not reference pointers to components.
		Fixing a crash bug in CommandInterpreter when tab completing
		non-existant component names.
		Implementing a VariableAssignmentAction. No expressions yet,
		only simple values (numeric, strings, and boolean values).
20080531	Refactoring the Component::AddVariable* functions into a
		single template function.
20080605	[0.4.x branch]  Fixing a corner case in ARM pc-relative loads,
		which was unimplemented before. (Triggered by doing builds of
		pkgsrc stuff inside emulated NetBSD/cats.)
20080610	[0.4.x branch]  Applying a patch from Jiri Svoboda, which
		implements the ARM "bkpt" instruction.

==============  RELEASE 0.4.6.4 (gxemul-legacy branch)  ==============

20080611	[0.4.x branch]  Correcting the ARM pc-relative load fix; the
		wrong address variable was used. Also, the pc-relative _load_
		code was used for stores as well, which was completely
		incorrect. On ARM, since pc-relative loads are converted into
		immediate movs, on writes to pages that contain such
		translations, the ENTIRE page must be invalidated, not just the
		1/32th that was code. This has now been implemented.

==============  RELEASE 0.4.6.5 (gxemul-legacy branch)  ==============

20080808	[0.4.x branch]  Applying a patch from Kiyotaka Inaba which
		causes an ARM UND exception to be generated by the instruction
		word 0xe6000011, which is needed by gdb when running inside the
		emulator. Also enabling ARM UND exceptions for ARM floating
		point instructions (needed by both Linux and NetBSD/arm).
20080810	Implementing a basic Trigger framework.